# metric

./: ARCHITECTURE.md  CAP_Demo.ipynb  IMPLEMENTATION_GUIDE.md  Metrics_Hub_Demo.ipynb  README.md  USER_GUIDE.md  deploy_demo_simple_calculator.py  pyproject.toml  requirements.txt  test_installation.py
cap/: __init__.py  api.py  core.py  dashboard.py
cap/data/: __init__.py  sources.py  treatment.py
cap/metrics/: __init__.py  demo_simple_calculator.py  demo_simple_calculator.yaml
cap/scaffolding/: __init__.py  cli.py
deploy/: demo_simple_calculator.py
docs/: architecture.md  user-guide.md
metrics_hub/: __init__.py  api.py  core.py  dashboard.py
metrics_hub/metrics/: __init__.py  demo_simple_calculator.py  demo_simple_calculator.yaml  example_financial_analysis.py  example_financial_analysis.yaml
metrics_hub/scaffolding/: __init__.py  cli.py
tests/: test_api_processing.py  test_cli.py  test_core_registry.py  test_data_treatment.py  test_demo_simple_calculator.py
