[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cap"
version = "1.0.0"
description = "Commercial Analytical Platform for developing and deploying metrics with rich outputs"
readme = "README.md"
authors = [
    {name = "CAP Team", email = "contact@cap.dev"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["metrics", "monitoring", "analytics", "plotly", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "plotly>=5.14.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dashboard = ["dash>=2.14.0", "nbformat>=4.2.0"]
database = ["sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0"]
api = ["requests>=2.31.0", "httpx>=0.25.0"]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "httpx>=0.25.0",
]
performance = ["polars>=0.20.0"]
all = [
    "dash>=2.14.0",
    "nbformat>=4.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "polars>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cap"
Repository = "https://github.com/yourusername/cap"
Documentation = "https://cap.readthedocs.io/"

[project.scripts]
cap = "cap.scaffolding.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cap"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: mark test as slow",
]
